--- a/index1.html
+++ b/index1.html
@@ -7,11 +7,13 @@
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <!-- customcss -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <header class="container">
-        <nav class="navbar navbar-expand-lg bg-light">
+        <nav class="navbar navbar-expand-lg fixed-top bg-light">
             <div class="container">
                 <a class="navbar-brand" href="#">
                     <img src="/images/logo.png" alt="">
@@ -27,13 +29,13 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Shoes</a>
+                            <a class="nav-link" href="#shoes">Shoes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Backpack</a>
+                            <a class="nav-link" href="#backpack">Backpack</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Subscribe</a>
+                            <a class="nav-link" href="#subscribe">Subscribe</a>
                         </li>
 
 
@@ -126,10 +128,11 @@
     <main>
         <!-- categoriesstart -->
         <section>
-            <div class="container text-center my-5">
+            <div class="container text-center my-5 categories">
                 <div class="row gy-5">
                     <div class="col-lg-4 col-md-6 col-sm-12">
-                        <div class="p-3 border bg-warning rounded-3 d-flex align-items-center justify-content-around">
+                        <div
+                            class="p-3 border panda-bg-warning rounded-3 d-flex align-items-center justify-content-around">
                             <h1 class="text-white">Watch</h1>
                             <img src="images/categories/watch.png" alt="">
                         </div>
@@ -155,7 +158,7 @@
         </section>
         <!-- categoriesend -->
         <!-- shoessection -->
-        <section class="container my-5">
+        <section id="shoes" class="container my-5">
             <h2>Shoes</h2>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
@@ -168,7 +171,7 @@
                                 additional content. This content is a little bit longer.</p>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-warning"> Buy Now </div>
+                            <div class="btn pnada-btn-warning "> Buy Now </div>
                         </div>
                     </div>
                 </div>
@@ -210,7 +213,7 @@
 
         <!-- backapcksectionstart -->
 
-        <section class="container my-5">
+        <section id="backpack" class="container my-5">
             <h2>Backpack</h2>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
@@ -265,11 +268,39 @@
 
 
         <!-- backapckend -->
+
+        <!-- subscribestar -->
+
+        <section id="subscribe" style="height: 300px;"
+            class="container d-flex justify-content-center bg-info align-items-center rounded-3">
+            <div>
+
+                <h2>Lets stay in touch</h2>
+                <p> Get update on sales, special & more</p>
+
+                <form>
+                    <div class="mb-3">
+
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+
+                    </div>
+
+
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+            </div>
+
+
+        </section>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
+
+    <footer class="mt-5 text-center">
+        <p><small> ©2023. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small></p>
+    </footer>
 </body>
 
 </html>
